# franklin-educator

./: .gitignore  CHANGELOG.md  pyproject.toml  release-tag.sh  requirements.txt
.github/workflows/: conda-release.yml
conda-build/: build_env.yaml  meta.yaml
docs/: _quarto.yml
docs/api/: _run.qmd  _sidebar.yml  index.qmd  launch_exercise.qmd  pull.qmd  run.qmd
docs/pages/: computer_setup.qmd  developing_exercises.qmd  docker.qmd  git.qmd  gitlab.qmd  jupyter.qmd  overview.qmd  r_to_python.ipynb  ssh.qmd  terminal.qmd
scripts/: conda-release.sh  conda.sh  publish_noarch.sh
src/franklin_educator/: git.py  howto.py
